# MacDeDup

./: .gitignore  Cargo.toml  README.md  test_dedup.sh
.github/workflows/: release.yml
Formula/: macdedup.rb
src/: cli.rs  clone.rs  main.rs  scanner.rs  tui.rs  types.rs
